# taotie

./: CHANGELOG.md  Cargo.toml  MySQL2CH.md  README.md  _typos.toml  cliff.toml  deny.toml
.github/workflows/: build.yml
examples/: arrow.rs  datafusion.rs  datafusion_sql.rs  parquet_async_read.rs  parquet_read.rs  polars.rs  repl.rs
fixtures/: file.parquet  nginx_logs.parquet
src/: lib.rs  main.rs
src/backend/: data_fusion.rs
src/backend/fusion/: df_describe.rs  mod.rs
src/cli/: connect.rs  describe.rs  head.rs  list.rs  mod.rs  schema.rs  sql.rs
