[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
arrow = "52.1.0"
arrow-cast = { version = "52.1.0", features = ["prettyprint"] }
parquet = { version = "52.1.0", features = ["json", "serde"] }
serde = { version = "1.0.204", features = ["derive"] }
